Created camera controller

--- a/.gitignore
+++ b/.gitignore
@@ -592,3 +592,4 @@ InitTestScene*.unity
 
 # End of https://www.toptal.com/developers/gitignore/api/unity,csharp,visualstudio
 LD48/Library/
+LD48/Temp/
